feat: 更新 API 文档
删除 http client 的 API 请求文件
