# docs/swagger.yaml
@@ -113,6 +113,20 @@ definitions:
         example: xxx.xxx.xxx
         type: string
     type: object
+  RequestHistory:
+    properties:
+      id:
+        type: string
+      ip:
+        type: string
+      time:
+        type: string
+      ua:
+        type: string
+      url:
+        description: 由于短链接的目标连接可能会被修改，可以在访问历史记录中记录一下当前的目标连接
+        type: string
+    type: object
   Response:
     properties:
       code:
@@ -164,7 +178,7 @@ definitions:
     properties:
       histories:
         items:
-          $ref: '#/definitions/models.RequestHistory'
+          $ref: '#/definitions/RequestHistory'
         type: array
     type: object
   ShortLinkNotFoundConfig:
@@ -235,20 +249,6 @@ definitions:
     properties:
       shortLink:
         $ref: '#/definitions/ShortLinkData'
-    type: object
-  models.RequestHistory:
-    properties:
-      id:
-        type: string
-      ip:
-        type: string
-      time:
-        type: string
-      ua:
-        type: string
-      url:
-        description: 由于短链接的目标连接可能会被修改，可以在访问历史记录中记录一下当前的目标连接
-        type: string
     type: object
 info:
   contact:
